[package]
name = "wirepact-translator"
version = "0.0.0-development"
edition = "2021"

[dependencies]
base64 = "0.13.1"
jsonwebtoken = "8.3.0"
log = "0.4.20"
openssl = "0.10.64"
openssl-sys = "0.9.100"
prost = "0.10"
prost-types = "0.10"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "signal"] }
tonic = { version = "0.7", features = ["tls", "tls-roots", "tls-roots-common"] }
tonic-types = "0.5"

[build-dependencies]
tonic-build = "0.7"
